# rsp

./: Cargo.toml  README.md  rsp_rofi.sh  setup.sh  update.sh
.config/rsp/: profile.json  settings.toml
.config/rsp/profiles/: arcade-db.toml  default.toml  hyprland.toml
config/rsp/profiles/: default.toml  hyprland.toml
src/: launch_profile.rs  launch_profile_.rs  main.rs  main_.rs  parser.rs  persistent_cmd.rs  profile.json  settings.rs
