[package]
name = "starter-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
libc = "0.2.155"
nix = { version = "0.28.0", features = ["process"] }
indexmap = "2.2.6"
toml = "0.8.13"
colored = "2.1.0"
